[metadata]
name = ysfitsutilpy
version = 0.2
description = Convenience utilities made by ysBach especially for dealing FITS files in astronomical sciences.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ysBach/ysfitsutilpy
author = Yoonsoo P. Bach
author_email = ysbach93@gmail.com,
license = BSD 3-clause
license_file = LICENSE
keywords = astronomy, data reduction, image analysis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Source = https://github.com/ysBach/ysfitsutilpy
    Tracker = https://github.com/ysBach/ysfitsutilpy/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.20  # following astropy 5.2
    scipy >= 1.5   # following astropy 5.2
    astropy >= 5.0
    photutils >= 1.6
    ccdproc >= 2.0
    bottleneck
    astroscrappy
zip_safe = False
platforms = any
include_package_data = True
setup_requires =
    setuptools_scm

[options.package_data]
* = *.md